After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 695772 - [Regression][Bisected] Different appearance of menus within Audacious
[Regression][Bisected] Different appearance of menus within Audacious
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkMenu
3.7.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2013-03-13 13:26 UTC by Thomas Lange
Modified: 2013-03-18 09:14 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
GTK interface, everything fine (113.02 KB, image/png)
2013-03-13 13:27 UTC, Thomas Lange
Details
Winamp interface, buggy appearance (176.72 KB, image/png)
2013-03-13 13:29 UTC, Thomas Lange
Details
Adwaita with GTK+ 3.7.12 (119.89 KB, image/png)
2013-03-13 13:30 UTC, Thomas Lange
Details
git-bisect history (2.09 KB, text/plain)
2013-03-13 13:31 UTC, Thomas Lange
Details

Description Thomas Lange 2013-03-13 13:26:15 UTC
Original bug report for Audacious:
http://redmine.audacious-media-player.org/issues/267

The background colour of menus when using the Winamp interface
is not the same as with the GTK interface.
With some themes the selection is even unnoticeable.
This is shown in the screenshot with Adwaita.
On Ubuntu a strange square is shown although the checkbutton is disabled.

The bug appeared between 3.4.0 and 3.5.2
through the commit 04c85a5b3bfe5ed276eb0530ce7bddd55dc7c204.
https://git.gnome.org/browse/gtk+/commit/?id=04c85a5b3bfe5ed276eb0530ce7bddd55dc7c204
Comment 1 Thomas Lange 2013-03-13 13:27:42 UTC
Created attachment 238777 [details]
GTK interface, everything fine
Comment 2 Thomas Lange 2013-03-13 13:29:44 UTC
Created attachment 238778 [details]
Winamp interface, buggy appearance

White text on white background colour, orange square
Comment 3 Thomas Lange 2013-03-13 13:30:59 UTC
Created attachment 238779 [details]
Adwaita with GTK+ 3.7.12

Selection completely unnoticeable
Comment 4 Thomas Lange 2013-03-13 13:31:51 UTC
Created attachment 238780 [details]
git-bisect history
Comment 5 Thomas Lange 2013-03-15 23:29:38 UTC
Patch works fine, thanks for the fix.
Will it be included with GTK 3.6.5?
Comment 6 Benjamin Otte (Company) 2013-03-18 09:14:21 UTC
I'm kinda afraid of pushing that into the stable release at this point, as I don't know if it has issues I haven't found yet.

That said, audacious could just stop popping up menus that are attached to an invisible menubar widget to get around this problem.