gtk/gtkstylecontext.c
@@ -1071,10 +1071,10 @@ gtk_style_context_set_invalid (GtkStyleContext *context,
 
   if (invalid)
     {
-      if (priv->parent)
-        gtk_style_context_set_invalid (priv->parent, TRUE);
-      else if (GTK_IS_RESIZE_CONTAINER (priv->widget))
+      if (GTK_IS_RESIZE_CONTAINER (priv->widget))
         _gtk_container_queue_restyle (GTK_CONTAINER (priv->widget));
+      else if (priv->parent)
+        gtk_style_context_set_invalid (priv->parent, TRUE);
     }
 }
 
